fix clipr stories height too high in the catalog section

--- a/src/sass/catalog/parts/tiles.scss
+++ b/src/sass/catalog/parts/tiles.scss
@@ -2,7 +2,6 @@
 #main_container{padding:10px;}
 .tile{
   background-color:#FFF;
-  min-height:500px;
   padding:10px;
   width:20%;
   cursor:pointer;
